--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 			<p>Make your own monster face by clicking on the picture.</p></header>
 
 		<div id="container">
-			<img class="lightning" id="lightning1" src="images/lightning-01.jpg">
-			<img class="lightning" id="lightning2" src="images/lightning-02.jpg">
-			<img class="lightning" id="lightning3" src="images/lightning-03.jpg">
+			<img class="lightning" id="lightning1" src="lightning-01.jpg">
+			<img class="lightning" id="lightning2" src="lightning-02.jpg">
+			<img class="lightning" id="lightning3" src="lightning-03.jpg">
 			<div id="frame">
 				<div id="pic_box">
 					<div id= "head" class = "face"><img src="headsstrip.jpg"></div>
