--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<link type="text/css" href="my_style.css" rel="stylesheet" />
 	</head>
 	<body> 
-		<header id="top"><img src="images/Monster_Mashup.png">
+		<header id="top"><img src="Monster_Mashup.png">
 			<p>Make your own monster face by clicking on the picture.</p></header>
 
 		<div id="container">
