--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				</div>
 			</div>
 		</div>
-		<script src="scripts/jquery-1.6.2.min.js"></script>
-		<script src="scripts/my_scripts.js"></script>
+		<script src="jquery-1.6.2.min.js"></script>
+		<script src="my_scripts.js"></script>
 	</body>
 </html>
